--- a/index.html
+++ b/index.html
@@ -115,7 +115,13 @@ You&#39;re not jealous.] (click-append: &quot;You&#39;re not jealous&quot;) [ be
 &lt;img src=&quot;img/tramp2.png&quot; alt=&quot;girls in a row at Tramp&quot; /&gt;
 
 
-You start to fear for your own safety.] (click-append: &quot;You start to fear for your own safety&quot;) [ (after all, he threatened to kill you if you ever left him for someone else)] (click-append: &quot;someone else).&quot;) [ In X&#39;s eyes you are every single woman who is making out with any man or woman on the dance floor.] (click-append: &quot;dance floor.&quot;) [ You&#39;re gyrating against hundreds of bodies all at once.] (click-append: &quot;all at once&quot;) [, texting scores of potential lovers] (click-append: &quot;potential lovers&quot;) [, your flesh multiplied and embodied by every pulsing body in the venue] (click-append: &quot;pulsing body in the venue.&quot;) [ You are the hyper-sexual adulteress of his nightmares in every reality.] (click-append: &quot;in every reality&quot;) [ except the one that you inhabit] (click-append: &quot;except the one that you inhabit.&quot;) [
+You start to fear for your own safety.] (click-append: &quot;You start to fear for your own safety&quot;) [ (after all, he threatened to kill you if you ever left him for someone else)] (click-append: &quot;he threatened to kill you if you ever left him for someone else).&quot;) [ In X&#39;s eyes you are every single woman who is making out with any man or woman on the dance floor.] (click-append: &quot;dance floor.&quot;) [ You&#39;re gyrating against hundreds of bodies all at once.] (click-append: &quot;all at once&quot;) [, texting scores of potential lovers] (click-append: &quot;potential lovers&quot;) [, your flesh multiplied and embodied by every pulsing body in the venue] (click-append: &quot;pulsing body in the venue.&quot;) [
+
+
+&lt;img src=&quot;img/blur.png&quot; alt=&quot;blurred image&quot; /&gt;
+
+
+You are the hyper-sexual adulteress of his nightmares in every reality.] (click-append: &quot;in every reality&quot;) [ except the one that you inhabit] (click-append: &quot;except the one that you inhabit.&quot;) [
 
 
 &lt;img src=&quot;img/ohyea.png&quot; alt=&quot;a psychedelic reality&quot; /&gt;
@@ -126,7 +132,7 @@ Why don&#39;t you [[go to the bathroom]] to take a break from this insane conver
 </tw-passagedata><tw-passagedata pid="4" name="go to the bathroom" tags="" position="327,393" size="100,100">You hurry up the stairs as fast as your boots will allow, your purple silk dress swishing at your thighs. (click-append: &quot;swishing at your thighs.&quot;) [ You walk past security into the bathroom and enter the first stall on your right, locking the door.] (click-append: &quot;locking the door.&quot;) [ You sit on the toilet and start to pee and then your heart sinks.] (click-append: &quot;your heart sinks.&quot;) [ You can hear a commotion outside and you know it&#39;s about you.] (click-append: &quot;it&#39;s about you.&quot;) [
 
 
-A desperate scream from outside the bathroom door] (click-append: &quot;outside the bathroom door&quot;) [: &quot;My fiancé is in there!&quot;] (click-append: &quot;in there!&quot;) [&quot;
+A desperate scream from outside the bathroom door] (click-append: &quot;outside the bathroom door&quot;) [: &quot;My fiancé is in there!&quot;] (click-append: &quot;My fiancé is in there!&quot;) [&quot;
 
 
 A low and commandeering voice: &quot;Mate, you can&#39;t go in the girls&#39; bathroom.]
@@ -138,7 +144,10 @@ And then... (click-append: &quot;And then...&quot;) [the door to the bathroom st
 &quot;I, uh, thought you went in here with someone,&quot; he stammers.] (click-append: &quot;he stammers.&quot;) [
 
 
-Now you&#39;re furious.] (click-append: &quot;Now you&#39;re furious.&quot;) [ You sober up instantly and ask Jade to help you escort X and his delusional thinking straight home.] (click-append: &quot;straight home.&quot;) [
+Now you&#39;re furious.] (click-append: &quot;Now you&#39;re furious.&quot;) [ 
+
+
+You sober up instantly and ask Jade to help you escort X and his delusional thinking straight home.] (click-append: &quot;straight home.&quot;) [
 
 
 &quot;It was the pot,&quot; he pleads, by way of explanation.] (click-append: &quot;explanation.&quot;) [ But you know it was the ice that triggered his psychosis.] (click-append: &quot;the ice&quot;) [ and his insane jealousy] (click-append: &quot;triggered his psychosis.&quot;) [
@@ -221,13 +230,16 @@ Who else would rock up at her apartment on a Friday night to offer chickenwire i
 You call X, demanding that he explain himself.] (click-append: &quot;explain himself.&quot;) [
 
 
-He denies (click-replace: &quot;denies&quot;) [lies about] being at Jade&#39;s house.] (click-append: &quot;being at Jade&#39;s house.&quot;) [
+He denies (click-replace: &quot;denies&quot;) [lies about] being at Jade&#39;s house.] (click-append: &quot;at Jade&#39;s house.&quot;) [
 
 
 &lt;img src=&quot;img/rackgoldies.png&quot; alt=&quot;clothes for sale at Goldfingers&quot; /&gt;
 
 
-Later that night when you pack up your suitcase to head to another club, the bouncer describes how a guy who meets the same physical description as X showed up at the club, asking for you by name.] (click-append: &quot;asking for you by name.&quot;) [ They said he was short and bald.] (click-replace: &quot;short and bald&quot;) [a creepy stalker] (click-append: &quot;creepy stalker.&quot;) [ To protect your privacy, the bouncer had told X you weren&#39;t there.] (click-append: &quot;you weren&#39;t there.&quot;) [ Now X is convinced that he&#39;s caught you in a lie.] (click-replace: &quot;he&#39;s caught you in a lie&quot;) [all his worst fears about you having an affair are true] (click-append: &quot;having an affair are true.&quot;) [
+Later that night when you pack up your suitcase to head to another club, the bouncer describes how a guy who meets the same physical description as X showed up at the club, asking for you by name.] (click-append: &quot;asking for you by name.&quot;) [ They said he was short and bald.] (click-replace: &quot;short and bald&quot;) [a creepy stalker] (click-append: &quot;creepy stalker.&quot;) [ 
+
+
+To protect your privacy, the bouncer had told X you weren&#39;t there.] (click-append: &quot;you weren&#39;t there.&quot;) [ Now X is convinced that he&#39;s caught you in a lie.] (click-replace: &quot;he&#39;s caught you in a lie&quot;) [all his worst fears about you having an affair are true] (click-append: &quot;all his worst fears about you having an affair are true.&quot;) [
 
 
 &lt;img src=&quot;img/rackjen.png&quot; alt=&quot;clothes for sale&quot; /&gt;
@@ -495,7 +507,10 @@ Your life bleeds into theirs: their customers pay for your product; their custom
 
 &lt;img src=&quot;img/corsets.png&quot; alt=&quot;girls in corsets drinking champagne&quot; /&gt;
 
-Ten years into this cycle (click-prepend: &quot;cycle&quot;) [very fun whirlwind ] (click-replace: &quot;very fun whirlwind cycle&quot;) [expensive and sometimes debt-inducing lifestyle] and your world is about to change.] (click-append: &quot;about to change.&quot;) [ Things had already begun to turn upside-down, but now other people are being sucked into the hellish vortex that is your life.] (click-append: &quot;hellish vortex that is your life.&quot;) [ A certain incubus picks you as an easy target.] (click-replace: &quot;an easy target&quot;) [his mark] (click-replace: &quot; his mark&quot;) [ his source of narcissistic supply] (click-append: &quot;source of narcissistic supply.&quot;) [ He&#39;s in the process of draining the light out of your life.] (click-append: &quot;light out of your life.&quot;) [
+Ten years into this cycle (click-prepend: &quot;cycle&quot;) [very fun whirlwind ] (click-replace: &quot;very fun whirlwind cycle&quot;) [expensive and sometimes debt-inducing lifestyle] and your world is about to change.] (click-append: &quot;about to change.&quot;) [ Things had already begun to turn upside-down, but now other people are being sucked into the hellish vortex that is your life.] (click-append: &quot;hellish vortex that is your life.&quot;) [ 
+
+
+A certain incubus picks you as an easy target.] (click-replace: &quot;an easy target&quot;) [his mark] (click-replace: &quot; his mark&quot;) [ his source of narcissistic supply] (click-append: &quot;source of narcissistic supply.&quot;) [ He&#39;s in the process of draining the light out of your life.] (click-append: &quot;light out of your life.&quot;) [
 
 
 &lt;img src=&quot;img/party3.png&quot; alt=&quot;more party girls&quot; /&gt;]
