--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ And there is none to be found because there is no one else.] (click-append: &quo
 He leaves without a Coke.] (click-append: &quot;without a Coke&quot;) [ because there was not a Coke in the fridge] (click-append: &quot;a Coke in the fridge&quot;) [ and it was never about refreshments anyway] (click-append: &quot;it was never about refreshments anyway.&quot;) [ 
 
 
-He&#39;s doubled his antipsychotic meds on his own accord.] (click-append: &quot;on his own accord&quot;) [, not under doctor&#39;s supervision] (click-append: &quot;under doctor&#39;s supervision.&quot;) [ 
+He&#39;s doubled his antipsychotic meds on his own accord.] (click-append: &quot;on his own accord&quot;) [, not under doctor&#39;s supervision] (click-append: &quot;not under doctor&#39;s supervision.&quot;) [ 
 
 
 [[Peacetime is over.]]
@@ -335,13 +335,13 @@ You are all objects to him.] (click-append: &quot;You are all objects to him.&qu
 You&#39;re working yourself to exhaustion but work is a pleasure compared to spending time with X.] (click-append: &quot;spending time with X.&quot;) [ You visit his therapist with him often.] (click-replace: &quot;often&quot;) [five times] (click-append: &quot;five times&quot;) [, and each time he admits to wrongdoing and promises to make enduring changes] (click-append: &quot;enduring changes&quot;) [, but the promises are as lasting as his cigarettes] (click-append: &quot;cigarettes.&quot;) [ 
 
 
-He accuses you of having an affair.] (click-append: &quot;of having an affair&quot;) [ and of being on drugs] (click-append: &quot;of being on drugs.&quot;) [ He says that you never even loved him, that you were only ever using him for a visa.] (click-append: &quot;using him for a visa.&quot;) [ His logic implies that you had sex with him hundreds of times (click-append: &quot;hundreds of times&quot;) [, sometimes three or four times a day,] (click-append: &quot;times a day,&quot;) [ submitting to all of his perversions] (click-replace: &quot;all of his perversions&quot;) [urination] (click-replace: &quot;urination&quot;) [anal] (click-replace: &quot;anal&quot;) [choking] (click-replace: &quot;choking&quot;) [bondage] to trick him into marrying you.] (click-append: &quot;marrying you.&quot;) [ 
+He accuses you of having an affair.] (click-append: &quot;of having an affair&quot;) [ and of being on ice] (click-append: &quot;of being on ice.&quot;) [ He says that you never even loved him, that you were only ever using him for a visa.] (click-append: &quot;using him for a visa.&quot;) [ His logic implies that you had sex with him hundreds of times (click-append: &quot;hundreds of times&quot;) [, sometimes three or four times a day,] (click-append: &quot;times a day,&quot;) [ submitting to all of his perversions] (click-replace: &quot;all of his perversions&quot;) [urination] (click-replace: &quot;urination&quot;) [anal] (click-replace: &quot;anal&quot;) [choking] (click-replace: &quot;choking&quot;) [bondage] to trick him into marrying you.] (click-append: &quot;marrying you.&quot;) [ 
 
 
-You made sacrifices.] (click-append: &quot;sacrifices.&quot;) [ You gave up friendships to please him.] (click-append: &quot;to please him.&quot;) [ You even threw away your vibrators because he so envied the pleasure they gave you.] (click-replace: &quot;the pleasure they gave you&quot;) [ the orgasms that he could not give you] (click-append: &quot;could not give you.&quot;) [ As if your pleasure belonged to him only.] (click-append: &quot;As if your pleasure belonged to him only.&quot;) [
+You made sacrifices.] (click-append: &quot;sacrifices.&quot;) [ You gave up friendships to please him.] (click-append: &quot;to please him.&quot;) [ You even threw away your vibrators because he so envied the pleasure they gave you.] (click-replace: &quot;he so envied the pleasure they gave you&quot;) [ the orgasms that he could not give you] (click-append: &quot;the orgasms that he could not give you.&quot;) [ As if your pleasure belonged to him only.] (click-append: &quot;As if your pleasure belonged to him only.&quot;) [
 
 
-No woman would debase herself so completely (click-replace: &quot;so completely&quot;) [so painfully] (click-replace: &quot;so painfully&quot;) [so often] if not for love.] (click-append: &quot;for love&quot;) [ or money] (click-append: &quot;or money&quot;) [, of which he had none] (click-append: &quot;he had none.&quot;) [ 
+No woman would debase herself so completely (click-replace: &quot;No woman would debase herself so completely&quot;) [so painfully] (click-replace: &quot;so painfully&quot;) [so often] if not for love.] (click-append: &quot;for love&quot;) [ or money] (click-append: &quot;or money&quot;) [, of which he had none] (click-append: &quot;he had none.&quot;) [ 
 
 
 So if sex is a bargaining chip, we are all tricksters and harlots.] (click-append: &quot;tricksters and harlots.&quot;) [
