--- a/index.html
+++ b/index.html
@@ -341,10 +341,10 @@ He accuses you of having an affair.] (click-append: &quot;of having an affair&qu
 You made sacrifices.] (click-append: &quot;sacrifices.&quot;) [ You gave up friendships to please him.] (click-append: &quot;to please him.&quot;) [ You even threw away your vibrators because he so envied the pleasure they gave you.] (click-replace: &quot;he so envied the pleasure they gave you&quot;) [ the orgasms that he could not give you] (click-append: &quot;the orgasms that he could not give you.&quot;) [ As if your pleasure belonged to him only.] (click-append: &quot;As if your pleasure belonged to him only.&quot;) [
 
 
-No woman would debase herself so completely (click-replace: &quot;No woman would debase herself so completely&quot;) [so painfully] (click-replace: &quot;so painfully&quot;) [so often] if not for love.] (click-append: &quot;for love&quot;) [ or money] (click-append: &quot;or money&quot;) [, of which he had none] (click-append: &quot;he had none.&quot;) [ 
+No woman would debase herself so completely (click-replace: &quot;so completely&quot;) [so painfully] (click-replace: &quot;so painfully&quot;) [so often] if not for love.] (click-append: &quot;for love&quot;) [ or money] (click-append: &quot;or money&quot;) [, of which he had none] (click-append: &quot;he had none.&quot;) [ 
 
 
-So if sex is a bargaining chip, we are all tricksters and harlots.] (click-append: &quot;tricksters and harlots.&quot;) [
+So if sex is a bargaining chip, we&#39;re all tricksters and harlots.] (click-append: &quot;we&#39;re all tricksters and harlots.&quot;) [
 
 
 Mirror mirror on the wall.] (click-append: &quot;Mirror mirror on the wall.&quot;) [ 
@@ -362,52 +362,60 @@ It sounded an awful lot like jail.] (click-append: &quot;jail&quot;) [, which is
 But getting back to the [[chickenwire]]...]
 
 
-</tw-passagedata><tw-passagedata pid="13" name="chickenwire" tags="" position="674,616" size="100,100">When you were little your mother put up chickenwire fencing to keep out the rattlesnakes that slithered into your backyard, but which could not keep out the wild coyotes. You have a visceral memory of running your hands along the chickenwire, one hand on either side of the fencing, hands clasped in prayer, sliding across from post to post, again and again. How the thin braids of metal interrupted the sticky connection of palm on palm, where love line meets love line, creating additional friction that bordered on burn.
-
-&lt;img src=&quot;img/snake.png&quot; alt=&quot;girl wearing a carpet python&quot; /&gt;
+</tw-passagedata><tw-passagedata pid="13" name="chickenwire" tags="" position="674,616" size="100,100">When you were little your mother put up chickenwire fencing to keep out the rattlesnakes that slithered into your backyard, but which could not keep out the wild coyotes. (click-append: &quot;which could not keep out the wild coyotes.&quot; [
 
 
-Today X shows up at Jade&#39;s apartment with a roll of chickenwire.
+You have a visceral memory of running your hands along the chickenwire, one hand on either side of the fencing, hands clasped in prayer, sliding across from post to post, again and again.] (click-append: &quot;again and again.&quot;) [
 
 
-Today X reveals his identity over the intercom.
+How the thin braids of metal interrupted the sticky connection of palm on palm, where love line meets love line, creating additional friction that bordered on burn.
+
+&lt;img src=&quot;img/snake.png&quot; alt=&quot;girl wearing a carpet python&quot; /&gt;]
 
 
-Jade asks him to leave.
+Today X shows up at Jade&#39;s apartment with a roll of chickenwire. (click-append: &quot;with a roll of chickenwire.&quot;) [
 
 
-He won&#39;t leave.
+Today X reveals his identity over the intercom.] (click-append: &quot;Today X reveals his identity over the intercom.&quot;) [
+
+
+Jade asks him to leave.] (click-append: &quot;Jade asks him to leave.&quot;) [
+
+
+He won&#39;t leave.] (click-append: &quot;He won&#39;t leave.&quot;) [
 
 
 Today, against her better judgment, and because she&#39;s too tired to argue any more, Jade lets X in so he can install the chickenwire for her cat.
 
-&lt;img src=&quot;img/cat.png&quot; alt=&quot;cat on couch&quot; /&gt;
+&lt;img src=&quot;img/cat.png&quot; alt=&quot;cat on couch&quot; /&gt;]
 
-X insists he has something urgent to tell her. A secret about you. (Click-replace: &quot;A secret about you&quot;) [Once inside her apartment, he tells Jade that this is an intervention on your behalf, that you are an ice addict, But shhhh...don&#39;t tell anyone because it&#39;s our little secret]
-
-
-Once more, she asks him to leave.
+X insists he has something urgent to tell her. (click-append: &quot;X insists he has something urgent to tell her.&quot;) [ A secret about you.] (click-append: &quot;A secret about you&quot;) [ Once inside her apartment, he tells Jade that this is an intervention on your behalf, that you are an ice addict, But shhhh...don&#39;t tell anyone because it&#39;s our little secret.] (click-append: &quot;our little secret.&quot;) [
 
 
-He refuses.
+Once more, she asks him to leave.] (click-append: &quot;she asks him to leave.&quot;) [
 
 
-She calls you, panicked, afraid.
+He refuses.] (click-append: &quot;He refuses.&quot;) [
 
 
-&quot;He showed up and he won&#39;t leave,&quot; she says. &quot;Please come help.&quot;
+She calls you, panicked, afraid.] (click-append: &quot;panicked, afraid.&quot;) [
 
 
-By now the chickenwire fencing installation is proceeding against all protestation. (click-append: &quot;protestation&quot;) [ because some men are conditioned to think that no means yes, that it is merely a token resistence that allows women to play the part of the pursued (click-replace: &quot;pursued&quot;) [stalked] and men the part of the persuer (click-replace: &quot;persuer&quot;) [stalked]] As if women&#39;s desires and refusals are inconsequential. (click-replace: &quot;inconsequential&quot;) [meaningless] (click-replace: &quot;meaningless&quot;) [token gestures of resistance, designed to be overcome]
+&quot;He showed up and he won&#39;t leave,&quot; she says. &quot;Please come help.&quot;]
 
 
-Chickenwire fencing, purposed to keep danger away, is now the cause of your detainment in a small apartment with a madman and his whimsy. (click-replace: &quot;whimsy&quot;) [stubborn resistance] (click-replace: &quot;stubborn resistance&quot;) [continued efforts at coercive control]
+By now the chickenwire fencing installation is proceeding against all protestation. (click-append: &quot;protestation&quot;) [ because some men are conditioned to think that no means yes, that it is merely a token resistence that allows women to play the part of the pursued (click-replace: &quot;pursued&quot;) [stalked] and men the part of the persuer (click-replace: &quot;persuer&quot;) [stalked]] As if women&#39;s desires and refusals are inconsequential. (click-replace: &quot;inconsequential&quot;) [meaningless] (click-replace: &quot;meaningless&quot;) [token gestures of resistance, designed to be overcome] (click-append: &quot;token gestures of resistance, designed to be overcome.&quot;) [ 
 
 
-You sit stone-faced in a lounge chair in Jade&#39;s living room, your side-eye trained on the minor construction project, making sure the nail gun isn&#39;t aimed at either of you. For hours.
+Chickenwire fencing, purposed to keep danger away, is now the cause of your detainment in a small apartment with a madman and his whimsy.] (click-replace: &quot;whimsy&quot;) [stubborn resistance] (click-replace: &quot;stubborn resistance&quot;) [continued efforts at coercive control] (click-append: &quot;continued efforts at coercive control.&quot;) [
 
 
-He has done his best to alienate you from one friend after another. It&#39;s a textbook tactic for any abuser. You wish you hadn&#39;t saved him the night he went into convulsions from taking too many drugs. The night of your engagement. You fantasise that he&#39;ll fall off the ladder and land in hospital, where he can&#39;t hurt you any more.
+You sit stone-faced in a lounge chair in Jade&#39;s living room, your side-eye trained on the minor construction project, making sure the nail gun isn&#39;t aimed at either of you.] (click-append: &quot;making sure the nail gun isn&#39;t aimed at either of you.&quot;) [ For hours.] (click-append: &quot;For hours.&quot;) [
+
+
+He has done his best to alienate you from one friend after another.]  (click-append: &quot;He has done his best to alienate you from one friend after another.&quot;) [ It&#39;s a textbook tactic for any abuser.] (click-append: &quot;It&#39;s a textbook tactic for any abuser.&quot;) [
+
+You wish you hadn&#39;t saved him the night he went into convulsions from taking too many drugs.] (click-append: &quot;he went into convulsions from taking too many drugs.&quot;) [ The night of your engagement.] (click-append: &quot;The night of your engagement.&quot;) [ You fantasise that he&#39;ll fall off the ladder and land in hospital, where he can&#39;t threaten you any more.]
 
 
 Do you [[go back to your apartment with X]] that night or do you [[beg him to stay at his mum&#39;s house]] for awhile? 
