--- a/index.html
+++ b/index.html
@@ -362,18 +362,18 @@ It sounded an awful lot like jail.] (click-append: &quot;jail&quot;) [, which is
 But getting back to the [[chickenwire]]...]
 
 
-</tw-passagedata><tw-passagedata pid="13" name="chickenwire" tags="" position="674,616" size="100,100">When you were little your mother put up chickenwire fencing to keep out the rattlesnakes that slithered into your backyard, but which could not keep out the wild coyotes. (click-append: &quot;which could not keep out the wild coyotes.&quot; [
+</tw-passagedata><tw-passagedata pid="13" name="chickenwire" tags="" position="674,616" size="100,100">When you were little your mother put up chickenwire fencing to keep out the rattlesnakes that slithered into your backyard, but which could not keep out the wild coyotes. (click-append: &quot;which could not keep out the wild coyotes.&quot;) [
 
 
-You have a visceral memory of running your hands along the chickenwire, one hand on either side of the fencing, hands clasped in prayer, sliding across from post to post, again and again.] (click-append: &quot;again and again.&quot;) [
+You have a visceral memory of running your hands along the chickenwire, one hand on either side of the fencing, hands clasped in prayer, sliding across from post to post, again and again.] (click-append: &quot;sliding accross from post to post, again and again.&quot;) [
 
 
-How the thin braids of metal interrupted the sticky connection of palm on palm, where love line meets love line, creating additional friction that bordered on burn.
+How the thin braids of metal interrupted the sticky connection of palm on palm, where love line meets love line, creating additional friction that bordered on burn.] (click-append: &quot;friction that bordered on burn.&quot;) [
 
-&lt;img src=&quot;img/snake.png&quot; alt=&quot;girl wearing a carpet python&quot; /&gt;]
+&lt;img src=&quot;img/snake.png&quot; alt=&quot;girl wearing a carpet python&quot; /&gt;
 
 
-Today X shows up at Jade&#39;s apartment with a roll of chickenwire. (click-append: &quot;with a roll of chickenwire.&quot;) [
+Today X shows up at Jade&#39;s apartment with a roll of chickenwire.] (click-append: &quot;with a roll of chickenwire.&quot;) [
 
 
 Today X reveals his identity over the intercom.] (click-append: &quot;Today X reveals his identity over the intercom.&quot;) [
